add animations, gif backgrounds, and test different card/background images:

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Ubuntu:300,400);
+@import 'https://fonts.googleapis.com/css?family=Titillium+Web';
 @-webkit-keyframes upleft {
   100% {
     transform: translate(-10px, -10px); } }
@@ -48,25 +49,26 @@ textarea {
         width: 50%; }
 
 .card {
+  position: relative;
   width: 100%;
   height: 100%;
   background-repeat: no-repeat;
   background-size: cover; }
   .card#about {
-    -webkit-animation: upleft 2s ease-out 2s forwards;
-    animation: upleft 2s ease-out 2s forwards;
+    -webkit-animation: upleft 2s ease-out 1s forwards;
+    animation: upleft 2s ease-out 1s forwards;
     background-image: url(/assets/img/one/ul.png); }
   .card#portfolio {
-    -webkit-animation: upright 2s ease-out 2s forwards;
-    animation: upright 2s ease-out 2s forwards;
+    -webkit-animation: upright 2s ease-out 1s forwards;
+    animation: upright 2s ease-out 1s forwards;
     background-image: url(/assets/img/one/ur.png); }
   .card#gallery {
-    -webkit-animation: downleft 2s ease-out 2s forwards;
-    animation: downleft 2s ease-out 2s forwards;
+    -webkit-animation: downleft 2s ease-out 1s forwards;
+    animation: downleft 2s ease-out 1s forwards;
     background-image: url(/assets/img/one/dl.png); }
   .card#contact {
-    -webkit-animation: downright 2s ease-out 2s forwards;
-    animation: downright 2s ease-out 2s forwards;
+    -webkit-animation: downright 2s ease-out 1s forwards;
+    animation: downright 2s ease-out 1s forwards;
     background-image: url(/assets/img/one/dr.png); }
   .card a {
     text-decoration: none; }
@@ -75,7 +77,8 @@ textarea {
       height: 100%;
       display: flex;
       justify-content: center;
-      flex-direction: column; }
+      flex-direction: column;
+      font-family: "Titillium Web", sans-serif; }
       .card a .content h3 {
         color: white;
         text-shadow: 0px 0px 8px #000000;
@@ -85,5 +88,13 @@ textarea {
         margin: 0 auto; }
   .card:hover {
     opacity: 0.9; }
+    .card:hover#about {
+      background-image: url(/assets/gif/one.gif); }
+    .card:hover#portfolio {
+      background-image: url(/assets/gif/two.gif); }
+    .card:hover#gallery {
+      background-image: url(/assets/gif/three.gif); }
+    .card:hover#contact {
+      background-image: url(/assets/gif/four.gif); }
 
 /*# sourceMappingURL=index.css.map */
