--- a/pug/index.pug
+++ b/pug/index.pug
@@ -21,6 +21,7 @@ html
             .card#about
               a(href='')
                 .content
+                  .video
                   h3.animated.fadeIn about
           td
             .card#portfolio
