--- a/sass/index.sass
+++ b/sass/index.sass
@@ -1,14 +1,19 @@
 @import url(https://fonts.googleapis.com/css?family=Ubuntu:300,400)
+@import 'https://fonts.googleapis.com/css?family=Titillium+Web'
 @import animations
 @import palette
 @import file-refs
+
+$font-caption: 'Titillium Web', sans-serif
 
 body
   padding: 0px
   margin: 0px
   background:
-    // color: black
     color: darken(#112233, 8%)
+    // image: url($img-folder + "/background.jpg")
+    // repeat: no-repeat
+    // size: 100vw 100vh  
 
 textarea
   resize: none
@@ -33,6 +38,7 @@ textarea
 
 $img-choice: $one-folder
 .card
+  position: relative
   width: 100%
   height: 100%
   background:
@@ -64,6 +70,7 @@ $img-choice: $one-folder
       display: flex
       justify-content: center
       flex-direction: column
+      font-family: $font-caption
       h3
         color: white
         text-shadow: 0px 0px 8px #000000
@@ -72,3 +79,16 @@ $img-choice: $one-folder
         margin: 0 auto
   &:hover
     opacity: 0.9
+    &#about
+      background:
+        image: url($gif-folder + "/one.gif")
+    &#portfolio
+      background:
+        image: url($gif-folder + "/two.gif")
+
+    &#gallery
+      background:
+        image: url($gif-folder + "/three.gif")
+    &#contact
+      background:
+        image: url($gif-folder + "/four.gif")
