Spread animation version works

--- a/assets/css/animations.css
+++ b/assets/css/animations.css
@@ -1,26 +1,36 @@
 @-webkit-keyframes upleft {
   100% {
-    transform: translate(-10px, -10px); } }
+    transform: translate(-5px, -5px); } }
 @keyframes upleft {
   100% {
-    transform: translate(-10px, -10px); } }
+    transform: translate(-5px, -5px); } }
 @-webkit-keyframes upright {
   100% {
-    transform: translate(10px, -10px); } }
+    transform: translate(5px, -5px); } }
 @keyframes upright {
   100% {
-    transform: translate(10px, -10px); } }
+    transform: translate(5px, -5px); } }
 @-webkit-keyframes downleft {
   100% {
-    transform: translate(-10px, 10px); } }
+    transform: translate(-5px, 5px); } }
 @keyframes downleft {
   100% {
-    transform: translate(-10px, 10px); } }
+    transform: translate(-5px, 5px); } }
 @-webkit-keyframes downright {
   100% {
-    transform: translate(10px, 10px); } }
+    transform: translate(5px, 5px); } }
 @keyframes downright {
   100% {
-    transform: translate(10px, 10px); } }
+    transform: translate(5px, 5px); } }
+@-webkit-keyframes fadeIn {
+  0% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
+@keyframes fadeIn {
+  0% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
 
 /*# sourceMappingURL=animations.css.map */
