--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,29 +1,42 @@
 @import url(https://fonts.googleapis.com/css?family=Ubuntu:300,400);
 @import 'https://fonts.googleapis.com/css?family=Titillium+Web';
+@import "http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css";
+@import url(bootstrap.min.css);
+@import url(animate.css);
 @-webkit-keyframes upleft {
   100% {
-    transform: translate(-10px, -10px); } }
+    transform: translate(-5px, -5px); } }
 @keyframes upleft {
   100% {
-    transform: translate(-10px, -10px); } }
+    transform: translate(-5px, -5px); } }
 @-webkit-keyframes upright {
   100% {
-    transform: translate(10px, -10px); } }
+    transform: translate(5px, -5px); } }
 @keyframes upright {
   100% {
-    transform: translate(10px, -10px); } }
+    transform: translate(5px, -5px); } }
 @-webkit-keyframes downleft {
   100% {
-    transform: translate(-10px, 10px); } }
+    transform: translate(-5px, 5px); } }
 @keyframes downleft {
   100% {
-    transform: translate(-10px, 10px); } }
+    transform: translate(-5px, 5px); } }
 @-webkit-keyframes downright {
   100% {
-    transform: translate(10px, 10px); } }
+    transform: translate(5px, 5px); } }
 @keyframes downright {
   100% {
-    transform: translate(10px, 10px); } }
+    transform: translate(5px, 5px); } }
+@-webkit-keyframes fadeIn {
+  0% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
+@keyframes fadeIn {
+  0% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
 body {
   padding: 0px;
   margin: 0px;
@@ -53,7 +66,8 @@ textarea {
   width: 100%;
   height: 100%;
   background-repeat: no-repeat;
-  background-size: cover; }
+  background-size: cover;
+  background-position: 0% 0%; }
   .card#about {
     -webkit-animation: upleft 2s ease-out 1s forwards;
     animation: upleft 2s ease-out 1s forwards;
@@ -87,7 +101,7 @@ textarea {
         text-align: center;
         margin: 0 auto; }
   .card:hover {
-    opacity: 0.9; }
+    opacity: 0.8; }
     .card:hover#about {
       background-image: url(/assets/gif/one.gif); }
     .card:hover#portfolio {
