--- a/sass/index.sass
+++ b/sass/index.sass
@@ -1,10 +1,15 @@
 @import url(https://fonts.googleapis.com/css?family=Ubuntu:300,400)
 @import 'https://fonts.googleapis.com/css?family=Titillium+Web'
+@import "http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"
+@import "bootstrap.min.css"
+@import "animate.css"
+
 @import animations
 @import palette
 @import file-refs
 
 $font-caption: 'Titillium Web', sans-serif
+$img-choice: $one-folder
 
 body
   padding: 0px
@@ -13,7 +18,7 @@ body
     color: darken(#112233, 8%)
     // image: url($img-folder + "/background.jpg")
     // repeat: no-repeat
-    // size: 100vw 100vh  
+    // size: 100vw 100vh
 
 textarea
   resize: none
@@ -35,8 +40,6 @@ textarea
       td
         transform: translate(0,0)
         width: 50%
-
-$img-choice: $one-folder
 .card
   position: relative
   width: 100%
@@ -44,6 +47,7 @@ $img-choice: $one-folder
   background:
     repeat: no-repeat
     size: cover
+    position: 0% 0%
   &#about
     +slide(upleft)
     background:
@@ -78,7 +82,7 @@ $img-choice: $one-folder
         text-align: center
         margin: 0 auto
   &:hover
-    opacity: 0.9
+    opacity: 0.8
     &#about
       background:
         image: url($gif-folder + "/one.gif")
