update to use flexbox

--- a/pug/index.pug
+++ b/pug/index.pug
@@ -10,28 +10,21 @@ html
     title Emily Hansel | Portfolio
   body
     .body-container
-      table
-        tr
-          td
-            .card#about
-              a(href='')
-                .content
-                  .video
-                  h3.animated.fadeIn about
-          td
-            .card#portfolio
-              a(href='')
-                .content
-                  h3.animated.fadeIn portfolio
-        tr 
-          td
-            .card#gallery
-              a(href='')
-                .content
-                  h3.animated.fadeIn gallery
-          td
-            .card#contact
-              a(href='')
-                .content
-                  h3.animated.fadeIn contact
+      .card#about
+        a(href='')
+          .content
+            .video
+            h3.animated.fadeIn About
+      .card#portfolio
+        a(href='')
+          .content
+            h3.animated.fadeIn Portfolio
+      .card#gallery
+        a(href='')
+          .content
+            h3.animated.fadeIn Gallery
+      .card#contact
+        a(href='')
+          .content
+            h3.animated.fadeIn Contact
     script(src="assets/js/app.js")
