--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -51,39 +51,36 @@ textarea {
   position: fixed;
   left: 50%;
   top: 50%;
-  transform: translate(-50%, -50%); }
-  .body-container table {
-    width: 100%;
-    height: 100%; }
-    .body-container table tr {
-      height: 50%; }
-      .body-container table tr td {
-        transform: translate(0, 0);
-        width: 50%; }
+  transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap; }
 
 .card {
   position: relative;
-  width: 100%;
-  height: 100%;
+  width: 50%;
+  height: 50%;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 0% 0%; }
   .card#about {
-    -webkit-animation: upleft 2s ease-out 1s forwards;
-    animation: upleft 2s ease-out 1s forwards;
-    background-image: url(/assets/img/one/ul.png); }
+    -webkit-animation: upleft 2s linear 1s forwards;
+    animation: upleft 2s linear 1s forwards;
+    background: #ffff55; }
   .card#portfolio {
-    -webkit-animation: upright 2s ease-out 1s forwards;
-    animation: upright 2s ease-out 1s forwards;
-    background-image: url(/assets/img/one/ur.png); }
+    -webkit-animation: upright 2s linear 1s forwards;
+    animation: upright 2s linear 1s forwards;
+    background: #ffff55; }
   .card#gallery {
-    -webkit-animation: downleft 2s ease-out 1s forwards;
-    animation: downleft 2s ease-out 1s forwards;
-    background-image: url(/assets/img/one/dl.png); }
+    -webkit-animation: downleft 2s linear 1s forwards;
+    animation: downleft 2s linear 1s forwards;
+    background: #ffff55; }
   .card#contact {
-    -webkit-animation: downright 2s ease-out 1s forwards;
-    animation: downright 2s ease-out 1s forwards;
-    background-image: url(/assets/img/one/dr.png); }
+    -webkit-animation: downright 2s linear 1s forwards;
+    animation: downright 2s linear 1s forwards;
+    background: #ffff55; }
   .card a {
     text-decoration: none; }
     .card a .content {
@@ -94,12 +91,12 @@ textarea {
       flex-direction: column;
       font-family: "Titillium Web", sans-serif; }
       .card a .content h3 {
-        color: white;
-        text-shadow: 0px 0px 8px #000000;
+        color: black;
         -webkit-animation-delay: 3s;
         animation-delay: 3s;
         text-align: center;
-        margin: 0 auto; }
+        margin: 0 auto;
+        text-transform: lowercase; }
   .card:hover {
     opacity: 0.8; }
     .card:hover#about {
