--- a/sass/index.sass
+++ b/sass/index.sass
@@ -15,7 +15,7 @@ body
   padding: 0px
   margin: 0px
   background:
-    color: darken(#112233, 8%)
+    color: $bg-color
     // image: url($img-folder + "/background.jpg")
     // repeat: no-repeat
     // size: 100vw 100vh
@@ -31,40 +31,32 @@ textarea
   top: 50%
   transform: translate(-50%, -50%)
 
-  table
-    width: 100%
-    height: 100%
-
-    tr
-      height: 50%
-      td
-        transform: translate(0,0)
-        width: 50%
+  display: flex
+  justify-content: center
+  align-items: center
+  flex-direction: row
+  flex-wrap: wrap
 .card
   position: relative
-  width: 100%
-  height: 100%
+  width: 50%
+  height: 50%
   background:
     repeat: no-repeat
     size: cover
     position: 0% 0%
   &#about
     +slide(upleft)
-    background:
-      image: url($img-folder + $img-choice + "/ul.png")
+    background: $golden
   &#portfolio
     +slide(upright)
-    background:
-      image: url($img-folder + $img-choice + "/ur.png")
+    background: $golden
 
   &#gallery
     +slide(downleft)
-    background:
-      image: url($img-folder + $img-choice + "/dl.png")
+    background: $golden
   &#contact
     +slide(downright)
-    background:
-      image: url($img-folder + $img-choice + "/dr.png")
+    background: $golden
 
   a
     text-decoration: none
@@ -76,11 +68,11 @@ textarea
       flex-direction: column
       font-family: $font-caption
       h3
-        color: white
-        text-shadow: 0px 0px 8px #000000
+        color: black
         +delay(3s)
         text-align: center
         margin: 0 auto
+        text-transform: lowercase
   &:hover
     opacity: 0.8
     &#about
