--- a/pug/index.pug
+++ b/pug/index.pug
@@ -11,6 +11,7 @@ html
   body
     .body-container
       .contact-form
+        span x
         form(method="POST", action="https://formspree.io/emilylhansel@gmail.com")
           input(type="text", name="name", placeholder="Name")
           input(type="email", name="_replyto", placeholder="Email")
