--- a/sass/index.sass
+++ b/sass/index.sass
@@ -79,28 +79,35 @@ textarea
           display: block
           transform: translateX(-200%)
   .contact-form
+    z-index: 2
     position: absolute
     // display: none
     top: 0px
+    right: 0px
     bottom: 0px
     left: 0px
-    right: 0px
-    background-color: white
-    z-index: 2
     padding: 15px 10px
+    font-family: monospace
+    background-color: white
+    transform-origin: bottom left
+    span
+      position: absolute
+      top: 0
+      right: 8px
+      cursor: pointer
     input, textarea
       box-sizing: border-box
       display: inline-block
       border: 2px solid #112233
       outline: none
-      font-family: monospace
       transition: all 200ms ease-out
+      color: #112233
 
       &:focus
         border-color: lighten(#112233, 10%)
 
     input:not([type='submit'])
-      margin: 0 1.5%
+      margin: 0 1%
       height: 3em
       padding: 5px
       width: 43%
@@ -117,6 +124,9 @@ textarea
       height: 3em
 
       &:hover
+        background-color: lighten(#112233, 10%)
+        border-color: lighten(#112233, 10%)
+      &:focus
         background-color: lighten(#112233, 10%)
         border-color: lighten(#112233, 10%)
 
