--- a/pug/index.pug
+++ b/pug/index.pug
@@ -4,8 +4,8 @@ html
     meta(charset="utf-8")
     meta(http-equiv="X-UA-Compatible", content="IE=edge,chrome=1")
     meta(name="viewport", content="width=device-width, initial-scale=1")
-    //- link(rel="shortcut icon", href="./assets/img/m.png")
-    //- link(rel="icon", href="./assets/img/m.png", type="image/x-icon")
+    link(rel="shortcut icon", href="./assets/img/favicon.ico")
+    link(rel="icon", href="./assets/img/favicon.ico", type="image/x-icon")
     link(rel="stylesheet", href="assets/css/index.css")
     title Emily Hansel | Portfolio
   body
