--- a/pug/index.pug
+++ b/pug/index.pug
@@ -21,29 +21,29 @@ html
       h1 Emily Hansel
       h4 Dancer | Choreographer
       ul.menu
-        li.menu-item 
-          span about
+        .menu-item 
+          span.menu-button about
           ul.sub-menu
             li 
               a.site-link(href="/bio" alt="bio") bio
             li 
               a.site-link(href="assets/resume.pdf" alt="resume") resume
-        li.menu-item 
-          span works
+        .menu-item 
+          span.menu-button works
           ul.sub-menu 
             li 
               a.site-link(href="/choreography" alt="choreography") choreography
             li 
               a.site-link(href="/statement" alt="artist statement") artist statement          
-        li.menu-item 
-          span  media
+        .menu-item 
+          span.menu-button  media
           ul.sub-menu 
             li 
               a.site-link(href="/video" alt="video") video
             li 
               a.site-link(href="photo" alt="photo") photo
-        li.menu-item 
-          a.site-link#contact(href="" alt="contact") contact
+        .menu-item 
+          .site-link#contact contact
         //- .dancing-image
     script(src="assets/js/jquery.js")
     script(src="assets/js/app.js")
