--- a/sass/index.sass
+++ b/sass/index.sass
@@ -57,7 +57,6 @@ textarea
       cursor: pointer
       display: block
       padding: 5px 10px
-      // border: 2px solid white
     .sub-menu
       position: absolute
       padding: 0 20px
@@ -70,8 +69,8 @@ textarea
         overflow: hidden
         padding: 0 15px
         .site-link
-          transition: transform 500ms ease-out
           display: block
+          transition: transform 500ms ease-out
           transform: translate3d(-200%, 0px, 0px)
           &.active
             transform: translate3d(0%, 0px, 0px)
@@ -80,15 +79,22 @@ textarea
 .contact-form
   z-index: 2
   position: absolute
-  display: none
+  // display: none
   top: 0px
   right: 0px
   bottom: 0px
   left: 0px
-  padding: 15px 10px
+  padding: 10px 10px
   font-family: monospace
   background-color: white
   transform-origin: bottom left
+  p
+    margin: 0px auto 5px
+    letter-spacing: .2px
+  a
+    color: $form-color
+    &:hover
+      color: darken($form-color, 10%)
   span
     position: absolute
     top: 0
@@ -97,13 +103,13 @@ textarea
   input, textarea
     box-sizing: border-box
     display: inline-block
-    border: 2px solid #112233
+    border: 2px solid $form-color
     outline: none
     transition: all 200ms ease-out
-    color: #112233
+    color: $form-color
 
     &:focus
-      border-color: lighten(#112233, 10%)
+      border-color: lighten($form-color, 10%)
 
   input:not([type='submit'])
     margin: 0 1%
@@ -113,21 +119,18 @@ textarea
   textarea
     width: 90%
     height: 10em
-    margin: 15px auto
+    margin: 10px auto
 
   input[type='submit']
-    background-color: #112233
+    background-color: $form-color
     cursor: pointer
     color: white
-    width: 91%
+    width: 90%
     height: 3em
 
-    &:hover
-      background-color: lighten(#112233, 10%)
-      border-color: lighten(#112233, 10%)
-    &:focus
-      background-color: lighten(#112233, 10%)
-      border-color: lighten(#112233, 10%)
+    &:hover, &:focus
+      background-color: lighten($form-color, 10%)
+      border-color: lighten($form-color, 10%)
 
 .site-link, .menu-item
   &:hover
