--- a/sass/animations.sass
+++ b/sass/animations.sass
@@ -43,6 +43,11 @@ $spread-width: 5px
   -webkit-animation: $name $duration $timing-function $delay $fill-mode
   animation: $name $duration $timing-function $delay $fill-mode
 
+=dance($duration)
+  animation: dance $duration linear forwards
+  -webkit-animation: dance $duration linear forwards
+
+
 =delay($seconds)
   -webkit-animation-delay: $seconds
   animation-delay: $seconds
